Fix Tag misalignment inside Search in Firefox (https://github.com/woocommerce/woocommerce-admin/pull/1132)

--- a/plugins/woocommerce-admin/packages/components/src/search/style.scss
+++ b/plugins/woocommerce-admin/packages/components/src/search/style.scss
@@ -15,6 +15,8 @@
 		padding: 2px 2px 2px 36px;
 		border: 1px solid $core-grey-light-700;
 		background-color: $white;
+		display: flex;
+		align-items: center;
 
 		&.is-active {
 			border-color: $input-active-border;
