--- a/plugins/woocommerce-admin/packages/components/src/tag/style.scss
+++ b/plugins/woocommerce-admin/packages/components/src/tag/style.scss
@@ -2,8 +2,9 @@
 
 .woocommerce-tag {
 	display: inline-flex;
-	margin: 2px 4px 2px 0;
+	margin: 0 4px 0 0;
 	overflow: hidden;
+	vertical-align: middle;
 
 	.woocommerce-tag__text,
 	.woocommerce-tag__remove.components-icon-button {
